# OpenRA2

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: util.h
src/game/: ai.cpp  ai.h  campaign.h  data.cpp  data.h  game.cpp  game.h  game_hud.cpp  game_menu.cpp  game_settings.cpp  lang.cpp  lang.h  map.cpp  map.h  settings.cpp  world.cpp  world.h
src/gfx/: pixel.cpp  pixel.h  sprites.cpp  sprites.h
src/sfx/: sound.cpp  sound.h
